// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ModalBody /> ref should work 1`] = `
.c0 {
  min-height: 200px;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 24px;
  padding-right: 24px;
}

<div
  class="poodle-box poodle-modal-body c0"
>
  ModalBody
</div>
`;

exports[`<ModalBody /> should render Box props correctly 1`] = `
.c0 {
  min-height: 200px;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 24px;
  padding-right: 24px;
  margin-top: 20px;
}

<div
  class="poodle-box poodle-modal-body c0"
  id="id"
>
  ModalBody
</div>
`;

exports[`<ModalBody /> should render ModalBody correctly 1`] = `
.c0 {
  min-height: 200px;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 24px;
  padding-right: 24px;
}

<div
  class="poodle-box poodle-modal-body c0"
>
  ModalBody
</div>
`;

exports[`<ModalBody /> should render ModalBody with auto id 1`] = `
.c0 {
  min-height: 200px;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 24px;
  padding-right: 24px;
}

<div
  class="poodle-box poodle-modal-body c0"
  id="id"
>
  ModalBody
</div>
`;

exports[`<ModalBody /> theming should extend styles in global 1`] = `
.c0 {
  min-height: 200px;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 24px;
  padding-right: 24px;
  margin-top: 10px;
  letter-spacing: 250px;
  top: 0;
  text-indent: 1px;
}

<div
  class="poodle-box poodle-modal-body c0"
>
  ModalBody
</div>
`;

exports[`<ModalBody /> theming should extend styles in local 1`] = `
.c0 {
  min-height: 200px;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 24px;
  padding-right: 24px;
  margin-top: 10px;
  letter-spacing: 250px;
  top: 0;
  text-indent: 1px;
}

<div
  class="poodle-box poodle-modal-body c0"
>
  ModalBody
</div>
`;

exports[`<ModalBody /> theming should override styles 1`] = `
.c0 {
  margin-top: 50px;
}

<div
  class="poodle-box poodle-modal-body c0"
>
  ModalBody
</div>
`;

exports[`<ModalBody /> theming should render with default props correctly 1`] = `
.c0 {
  min-height: 200px;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 24px;
  padding-right: 24px;
}

<div
  class="poodle-box poodle-modal-body hello c0"
  id="id"
>
  ModalBody
</div>
`;
